frontend: fix line breaks in the middle of words

--- a/packages/iris-common/src/styles/text.css
+++ b/packages/iris-common/src/styles/text.css
@@ -1,5 +1,5 @@
 :root {
-	@apply hyphens-auto break-all;
+	@apply hyphens-auto break-words;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
